--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   shared_preferences: ^2.2.2
   intl: ^0.20.2
   flutter_svg: ^2.0.9
+  record: ^6.1.2
+  path_provider: ^2.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
